@@ -35,6 +35,7 @@ hexic-underground-belt=Hexic underground belt
 hexic-splitter=Hexic splitter
 demolisher=Demolisher
 sentient-spider=Sentient Spider
+hexaprism=Hexaprism
 
 [entity-description]
 hex-core=The core of the hex, able to make item trades. Link a belt into the left tunnel. Link a belt out of the right tunnel.
