@@ -3,6 +3,7 @@ Version: 0.4.1
 Date: 26/5/25
   Major Features:
     - Added [planet=aquilo].
+    - Added endgame resource on [planet=nauvis].
   Minor Features:
     - Item/fluid names now show in the custom tooltips seen in trades and initial resources UI.
     - A tooltip now shows for coin amounts if they are abbreviated with units like "k" or "M".
